clusters/management/clusters.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vcluster
  namespace: staging
spec:
  hosts:
    - staging.internal.m13t.dev
  gateways:
    - istio-system/vcluster
  tls:
    - match:
        - port: 443
          sniHosts:
            - staging.internal.m13t.dev
      route:
        - destination:
            host: staging
            port:
              number: 443
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vcluster
  namespace: production
spec:
  hosts:
    - production.internal.m13t.dev
  gateways:
    - istio-system/vcluster
  tls:
    - match:
        - port: 443
          sniHosts:
            - production.internal.m13t.dev
      route:
        - destination:
            host: production
            port:
              number: 443
